kubernetes/init-ingress-and-clusterissuer/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: e-commerce
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "local-ecommerce-prod.devopshub.org"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-prod
                port:
                  number: 3000 # use appropriate port
          - pathType: Prefix
            path: /api/users
            backend:
              service:
                name: user-service-prod
                port:
                  number: 5001 # use appropriate port
          - pathType: Prefix
            path: /api/products
            backend:
              service:
                name: product-service-prod
                port:
                  number: 5002 # use appropriate port
          - pathType: Prefix
            path: /api/orders
            backend:
              service:
                name: order-service-prod
                port:
                  number: 5003 # use appropriate port
          - pathType: Prefix
            path: /api/cart
            backend:
              service:
                name: cart-service-prod
                port:
                  number: 5004 # use appropriate port
    - host: "local-ecommerce-stage.devopshub.org"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-stage
                port:
                  number: 3000 # use appropriate port
          - pathType: Prefix
            path: /api/users
            backend:
              service:
                name: user-service-stage
                port:
                  number: 5001 # use appropriate port
          - pathType: Prefix
            path: /api/products
            backend:
              service:
                name: product-service-stage
                port:
                  number: 5002 # use appropriate port
          - pathType: Prefix
            path: /api/orders
            backend:
              service:
                name: order-service-stage
                port:
                  number: 5003 # use appropriate port
          - pathType: Prefix
            path: /api/cart
            backend:
              service:
                name: cart-service-stage
                port:
                  number: 5004 # use appropriate port
  tls:
    - hosts:
        - "local-ecommerce-prod.devopshub.org"
        - "local-ecommerce-stage.devopshub.org"
      secretName: e-commerce
