kubernetes/init-ingress-and-clusterissuer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: e-commerce
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "ecommerce.devopshub.org"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-prod
                port:
                  number: 8080 # use appropriate port
    - host: "ecommerce-stage.devopshub.org"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-stage
                port:
                  number: 8080 # use appropriate port
  tls:
    - hosts:
        - "ecommerce.devopshub.org"
        - "ecommerce-stage.devopshub.org"
      secretName: e-commerce
